{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "163fa968-dd35-484e-9410-4e86383a1b28",
            "actions": [
                {
                    "name": "Left Click",
                    "type": "Button",
                    "id": "db06e742-e2d3-4534-a508-c71faa945296",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse Look",
                    "type": "Value",
                    "id": "99d64ab9-2bea-4f3d-b531-2ae0833ca07f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Phone",
                    "type": "Button",
                    "id": "b0ddff5e-3779-4da0-875a-04e43948c09a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2819b719-3a5a-4ef6-a162-aa040f63bda9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79f98be8-4b47-4138-8234-2fcec25a5771",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fcff2f0-caa8-46fa-a892-4af095a96fd0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a16d92f-c306-4eae-a75f-57027157d5da",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ba585de-30d6-4d69-8cd3-2be5d49e64d0",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Phone",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Chat",
            "id": "c6e687da-d2d6-4781-9238-684bd832f2b7",
            "actions": [
                {
                    "name": "SendChat",
                    "type": "Button",
                    "id": "0dfbb2cf-499b-42f3-b5b7-6eaad92f2c69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterChat",
                    "type": "Button",
                    "id": "03e9b04d-bc76-475c-a17a-ebd825d1fbf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ViewChat",
                    "type": "Button",
                    "id": "3f00f6b0-1c31-4d03-a413-e238da083067",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "80053e6d-bd48-4b08-9964-0a3d770b7047",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bed4abd-d7c8-4bc9-9c42-12428b76ffb2",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4717165b-ea53-42d3-8faf-77606fde2a1a",
                    "path": "<Keyboard>/#(C)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}